Update README and improve localization in CultureLog application
- Updated README.md to enhance descriptions of social interactions and database setup instructions.
- Changed HTML language attributes from English to Spanish in index.html and 404.html for better localization.
- Refactored PostCard and Home components to improve user experience with clearer terminology for likes and follow requests.
- Enhanced error messages and accessibility attributes across various components for better user interaction.
- Removed unused MediaSearchRequest DTO and optimized repository methods for clarity and performance.